添加package.json包依赖

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
-  "name": "seejs",
-  "main": "./server.js"
+	"name" : "seejs",
+	"main" : "./server.js",
+	"dependencies" : 
+	{
+		"express" : "3.0.6",
+		"jade" : "*"
+	}
 }
